--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,4 +1,4 @@
 <div class="about">
  <%= image_tag "avatar.png", size: "210x270", align: "left",class: "avatar" %>
- <p> I am some guy with a laptop. I post things that interest me about programming, life, and programming life.</p>
+ <p> My name is Guilherme Raposo Pereira Mansur, I go by he. I'm some guy with a laptop. I post things that interest me about programming, life, and programming life.</p>
 </div>
