--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
   <%= favicon_link_tag '/favicon.ico'%>
 </head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width; initial-scale=1">
 <body>
   <div class="site container" >
     <%= render "layouts/header" %>
