--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,11 +17,11 @@
 @import "bootstrap";
 
 body {
-  font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
-  font-size: 1.5em;
+  font-family: Verdana, Geneva, sans-serif;;
+  font-size: 12pt;
   font-weight: 500;
   color: #262A2F;
-  background-color: #f9f9f9;
+  background-color: #fff;
   line-height: 1.5;
 }
 
